--- a/Game.html
+++ b/Game.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
-<body background="C:\Users\lione\Downloads\background 3.jpg">
+<body background="background 3.jpg">
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
