--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
-<body background="C:\Users\lione\Downloads\Background 2.jpg">
+<body background="Background 2.jpg">
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -15,21 +15,21 @@
   </nav>
   <div class="event-list">
     <div class="event">
-        <img src="C:\Users\lione\Downloads\Qatar.jpeg"alt="Qatar">
+        <img src="Qatar.jpeg"alt="Qatar">
         <div class="event-content">
             <h3>Age 1-13</h3>
             <p>I Resided Most of my life at qatar where i did my basic education.Nothing Beats the shawarma we get There. </p>
         </div>
     </div>
     <div class="event">
-        <img src="C:\Users\lione\Downloads\Mangalore.jpg" alt="Mangalore">
+        <img src="Mangalore.jpg" alt="Mangalore">
         <div class="event-content">
             <h3>Age 14-19</h3>
             <p>Moved to Namma Mangalore For My Future Studies. Nothing soothes me on a Sunday morning than a cup of chai and Masala Dosa</p>
         </div>
     </div>
     <div class="event">
-        <img src="C:\Users\lione\Downloads\home-video-thumbnail.jpg" alt="St Joseph Engineering College">
+        <img src="home-video-thumbnail.jpg" alt="St Joseph Engineering College">
         <div class="event-content">
             <h3>My Future</h3>
             <p>Currently Developing my skills in Computer Enginnering at the Esteemed St Joseph Engineering College . Fun to hang out at Lassi Corner</p>
