--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
-<body background="C:\Users\lione\Downloads\Background.jpg">
+<body background="Background.jpg">
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -20,7 +20,7 @@
   <a href="about.html" class="cta-button">Explore About</a>
 </div>
   </div>
-  <img src="C:\Users\lione\Desktop\Image.jpg" alt="My Profile" class="profile-pic" />
+  <img src="Image.jpg" alt="My Profile" class="profile-pic" />
   <footer>
     <p>&copy; 2025 Lionel Jason Dsouza (4SO24CB030). All rights reserved.</p>
   </footer>
