--- a/Game.html
+++ b/Game.html
@@ -46,8 +46,7 @@
     }
   </script>
   <div class="container">
-      <h2><span class="text">Send Us Your Comments</span></h2>
-    <form id="feedbackForm">
+      <form action="https://formsubmit.co/lioneljasonds@gmail.com" method="POST">
   <label for="name">Your Name:</label><br>
   <input type="text" id="name" name="name" required><br><br>
 
@@ -57,6 +56,8 @@
   <label for="comments">Your Comments:</label><br>
   <textarea id="comments" name="comments" rows="5" cols="30" required></textarea><br><br>
 
+  <!-- Hidden input to prevent spam -->
+  <input type="hidden" name="_captcha" value="false">
   <input type="submit" value="Submit">
 </form>
 
